# smol-course

./: pyproject.toml
2_preference_alignment/notebooks/: dpo_finetuning_example.ipynb  orpo_finetuning_example.ipynb
3_parameter_efficient_finetuning/notebooks/: finetune_sft_peft.ipynb
4_evaluation/notebooks/: lighteval_evaluate_and_analyse_your_LLM.ipynb
5_vision_language_models/notebooks/: vlm_sft_sample.ipynb  vlm_usage_sample.ipynb
7_inference/: generation_pipeline.ipynb  generation_pipeline_fastapi.py
8_agents/: code_agents.md
8_agents/notebooks/: agents.ipynb
