[project]
name = "smol-course"
version = "0.1.0"
description = "a smol course on llms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "huggingface-hub>=0.26.3",
    "lighteval>=0.6.2",
    "ipywidgets>=8.1.5",
    "transformers>=4.46.3",
    "trl>=0.12.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "bitsandbytes>=0.45.0",
    "loralib>=0.1.2",
    "peft>=0.14.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "tiktoken>=0.8.0",
    "matplotlib>=3.10.0",
    "fastapi[standard]>=0.110.3",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
